--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Momentum App</title>
   </head>
   <body>
+    <h2 id="clock">00:00:00<h2>
     <form class="hidden" id="login-form">
       <input
         required
@@ -17,7 +18,6 @@
       />
       <button>Log In</button>
     </form>
-    <h2 id="clock">00:00:00<h2>
     <h1 class="hidden" id="greeting"></h1>
     <div id="quote">
       <span></span>
@@ -27,5 +27,6 @@
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
+    <script src="js/todo.js"></script>
   </body>
 </html>
