--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       <button>Log In</button>
     </form>
     <h1 class="hidden" id="greeting"></h1>
+    <form  id="todo-form">
+      <input type="text" placeholder="Write a To Do and Press Enter" required />
+    </form>
+    <ul id="todo-list"></ul>
     <div id="quote">
       <span></span>
       <span></span>
